# remote_storage_adapter

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/prompb/: mod.rs  remote.rs  types.rs
